# cosmic-konnect

./: .gitignore  Cargo.toml  README.md  install.sh  justfile
cosmic-konnect-daemon/: Cargo.toml  cosmic-konnect.service
cosmic-konnect-daemon/src/: ble.rs  config.rs  dbus_api.rs  device.rs  error.rs  gatt.rs  main.rs  sync_engine.rs  wifi_hotspot.rs
cosmic-konnect-daemon/src/protocol/: connection.rs  crypto.rs  message.rs  mod.rs
cosmic-konnect-daemon/src/transport/: listener.rs  mdns.rs  mod.rs
docs/: PROTOCOL.md
docs/development-logs/: README.md  THEMATIC_ANALYSIS.md
examples/: test_msgpack.rs  test_pack.rs
resources/: applet-settings.json  cosmic-konnect.service  io.github.reality2_roycdavies.cosmic-konnect.desktop
src/: app.rs  applet.rs  ble.rs  clipboard.rs  connection.rs  crypto.rs  daemon_client.rs  dbus_client.rs  discovery.rs  filetransfer.rs  identity.rs  lib.rs  main.rs  notifications.rs  protocol.rs  service.rs  settings.rs  settings_cli.rs  settings_page.rs  tray.rs  unified_discovery.rs  wifidirect.rs
src/ckp/: connection.rs  crypto.rs  dbus.rs  discovery.rs  message.rs  mod.rs  service.rs
