[package]
name = "cosmic-konnect"
version = "0.1.0"
edition = "2021"
authors = ["Roy C. Davies"]
license = "MIT"
description = "KDE Connect protocol implementation for COSMIC desktop"
repository = "https://github.com/reality2-roycdavies/cosmic-konnect"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Networking
socket2 = { version = "0.5", features = ["all"] }

# TLS
rustls = "0.23"
tokio-rustls = "0.26"
rcgen = "0.13"  # For generating certificates
x509-parser = "0.17"  # For parsing certificates

# Utilities
uuid = { version = "1", features = ["v4"] }
hostname = "0.4"
dirs = "6"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# System info
sysinfo = "0.33"

# Signal handling
ctrlc = "3"

[dev-dependencies]
tokio-test = "0.4"
